Alpha 0.1.1 Mapped TablesInformation to model

--- a/storage/volatile/Tables.vlt.ini
+++ b/storage/volatile/Tables.vlt.ini
@@ -1,4 +1,5 @@
 [Table_Name_1]
+table_name = table_name_1
 partitioned = true
 partitions[] = p0
 partitions[] = p1
@@ -7,4 +8,5 @@ partitions[] = p3
 partitionCount = 4
 
 [Table_Name_2]
+table_name = table_name_2
 partitioned = false
