Alpha 0.1.2 Finished the MapperPayload component and sent data to each Gearman Worker

--- a/storage/volatile/Tables.vlt.ini
+++ b/storage/volatile/Tables.vlt.ini
@@ -1,12 +1,13 @@
-[Table_Name_1]
-table_name = table_name_1
-partitioned = true
+[t1]
+table_name = t1
+is_partitioned = false
+
+[t2]
+table_name = t2
+is_partitioned = true
 partitions[] = p0
 partitions[] = p1
 partitions[] = p2
 partitions[] = p3
-partitionCount = 4
-
-[Table_Name_2]
-table_name = table_name_2
-partitioned = false
+partitions[] = p4
+partitions[] = p5
