--- a/storage/volatile/Tables.vlt.ini
+++ b/storage/volatile/Tables.vlt.ini
@@ -4,4 +4,20 @@ is_partitioned = true
 
 [t2]
 table_name = t2
-is_partitioned = false
+is_partitioned = true
+
+[t3]
+table_name = t3
+is_partitioned = true
+
+[t4]
+table_name = t4
+is_partitioned = true
+
+[t5]
+table_name = t5
+is_partitioned = true
+
+[t6]
+table_name = t6
+is_partitioned = true
